<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a51notes.fragments.EditNoteFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/title"/>
        <EditText
            android:id="@+id/fragment_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:maxLines="1"
            android:hint="@string/enter_your_note_title"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/description"/>
        <EditText
            android:id="@+id/fragment_edit_desc"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scrollbars="vertical"
            android:hint="@string/desc_hint"
            android:inputType="textMultiLine"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/alarm_date"/>
        <TextView
            android:id="@+id/fragment_edit_alarm_date"
            android:text="@string/select_date"
            style="@style/custom_btn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/color"/>
        <TextView
            android:id="@+id/fragment_edit_color_btn"
            android:text="@string/select_color"
            style="@style/custom_btn" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/red"
                android:text="@string/mark_as_important"/>
            <CheckBox
                android:id="@+id/fragment_edit_important"
                android:layout_marginLeft="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <Button
            android:id="@+id/fragment_edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_note"/>
    </LinearLayout>
</ScrollView>