<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="45dp"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/registration_prompt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>

        <EditText
            android:id="@+id/activity_reg_fname_et"
            android:inputType="text"
            android:hint="@string/first_name"
            style="@style/RegistrationEdittextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/activity_reg_lname_et"
            android:inputType="text"
            android:hint="@string/last_name"
            style="@style/RegistrationEdittextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/activity_reg_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:maxLength="20"
            android:textColorHint="@color/hint_color"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="18sp"
            android:hint="@string/email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/activity_reg_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:maxLength="20"
            android:textColorHint="@color/hint_color"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp"
            android:hint="@string/username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/activity_reg_password1_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:maxLength="20"
            android:textColorHint="@color/hint_color"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18sp"
            android:hint="@string/password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/activity_reg_password2_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:maxLength="20"
            android:textColorHint="@color/hint_color"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18sp"
            android:hint="@string/confirm_password"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginBottom="5dp"/>

        <RadioGroup
            android:id="@+id/activity_reg_gender_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/activity_reg_gender_rb_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male"/>

            <RadioButton
                android:id="@+id/activity_reg_gender_rb_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female"/>

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"/>

        <EditText
            android:id="@+id/activity_reg_age_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:maxLength="20"
            android:textColorHint="@color/hint_color"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="18sp"
            android:hint="@string/hint_age"/>


        <Button
            android:id="@+id/activity_reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"/>

    </LinearLayout>

</ScrollView>

