<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a51notes.fragments.NoteDetailsFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/title"/>
        <TextView
            android:id="@+id/fragment_note_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        <TextView
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/fragment_note_details_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/alarm_date"/>
        <TextView
            android:id="@+id/fragment_note_details_alarm_date"
            style="@style/custom_btn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/create_date"/>
        <TextView
            android:id="@+id/fragment_note_details_create_date"
            style="@style/custom_btn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:text="@string/color"/>
        <TextView
            android:id="@+id/fragment_note_details_color_btn"
            style="@style/custom_btn" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/red"
                android:text="@string/important"/>
            <CheckBox
                android:id="@+id/fragment_note_details_important"
                android:layout_marginLeft="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>